- fix:     Rating style setting was always showing MPAA styles
- add:     Playlist dialog now also shows the year if available
- add:     Ability to use context menu on a collection
- change:  Removed xbmclogs.com option from settings (site down - for good?)
- fix:     Possible fix for crashes with mediacodec? Needs testing

[- 0.0.36 -]

- fix:    Rating bumper not showing when 'Style' set to 'Default' in the module
- fix:    Improved feature rating detection
- add:    New setting in 'Feature' - 'Default rating system'
- add:    Recursive directory scanning for Video Bumpers, Audio Format Bumpers, Trivia and Music
- add:    In action files, allow http data to be prepended with POST:, PUT: and DELETE: to specify method - defaults to POST
- add:    New settings tab 'Actions'
- add:    Settings on 'Actions' tab to specify action files for pause, resume and abort events
- add:    Added the ability to pause trivia

[- 0.0.35 -]

- fix:    Error in iTunes scraper causing sequence playback to fail

[- 0.0.34 -]

- add:    'Advanced' section in addon settings
- add:    'Debug logging' to 'Advanced' in addon settings
- add:    'Send log to xbmclogs.com (via Kodi Log Uploader)' to 'Advanced' in addon settings
- fix:    Possible fix to black screen with audio when playing a bumper video
- fix:    When cleaning the database if an item was missing, all items of that type were removed
- fix:    Error with some music files

[- 0.0.33 -]

- fix:    Queue dialog was showing : when rating was not available
- change: 'Music' setting now shows 'None' instead of 'Off'
- change: 'Rating limit' setting now shows 'None' instead of 'No Limit'
- fix:    Possible fix for crash on Fire TV with MediaCodec acceleration enabled - needs testing
- add:    New setting '3D tag detection regex' for modifying 3D detection
- fix:    Queue dialog showing wrong text color on buttons in some skins
- fix:    Now disables visualization and closes visualization window when trivia is playing